# Pet-Mk-VII

./: .clang-format  .gitignore  LICENSE  README.md  setup.cfg  setup.py
motor_driver_board/: beep_example.py  connector.py  motor_example.py
pet_mk_vii_launch/: setup.cfg  setup.py
pet_mk_vii_launch/launch/: pet-mk-vii-bringup.launch.py
pet_mk_vii_planner/: CMakeLists.txt  README.md  package.xml
pet_mk_vii_planner/cmake/: matplotplusplus.cmake
pet_mk_vii_planner/config/: rrt_parameters.yaml
pet_mk_vii_planner/docker/: Dockerfile  compose.yaml
pet_mk_vii_planner/include/pet_mk_vii_planner/: bezier.hpp  collision_map.hpp  goal.hpp  graph.hpp  rrt.hpp  rrtDefinitions.hpp  steerBezier.hpp  steerCtrv.hpp
pet_mk_vii_planner/src/: CMakeLists.txt  bezier.cpp  collision_map.cpp  goal.cpp  graph.cpp  main.cpp  pathVerification.cpp  rrt.cpp  rrtDefinitions.cpp  rviz_visualizer.cpp  steerBezier.cpp  steerCtrv.cpp  velocityProfile.cpp  visualization.cpp
pet_mk_vii_planner/src/include/: pathVerification.hpp  rviz_visualizer.hpp  velocityProfile.hpp  visualization.hpp
pet_mk_vii_planner/src/include/utility/: algorithm.hpp  interpolation.hpp  tiktok.hpp
pet_mk_vii_planner/src/utility/: algorithm.cpp  interpolation.cpp  tiktok.cpp
pet_mk_vii_planner/test/: CMakeLists.txt  bezier_connection_area.cpp  velocityProfile_test.cpp
pet_mk_vii_planner/tools/: CMakeLists.txt  bezier_connection_area.cpp  plot_velocity_profile.cpp
pet_mk_vii_simulation/: CMakeLists.txt  package.xml
pet_mk_vii_simulation/config/: gz_ros2_control.yaml  pet-mk-vii-parameters.yaml  ros_gz_bridge.yaml
pet_mk_vii_simulation/launch/: pet-mk-vii_gz.launch.py  vehicle.launch.py
pet_mk_vii_simulation/model/: pet-mk-vii.xacro
pet_mk_vii_simulation/src/: CMakeLists.txt  ackermann_controller.cpp
pet_mk_vii_simulation/src/include/: ackermann_controller.hpp
